--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "3.2.14", features = ["derive", "env"] }
 console = "0.15.1"
 curl = "0.4.44"
 git2 = "0.14.4"
+indicatif = "0.17.0"
 log = "0.4.17"
 mlua = { version = "0.8.1", features = ["luajit"] }
 pathdiff = "0.2.1"
